feat: simulation
