# routes/api.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\DashboardController;
 use App\Http\Controllers\FloristController;
 use App\Http\Controllers\GuestController;
 use App\Http\Controllers\SeatingTableController;
+use App\Http\Controllers\SimulationController;
 use App\Http\Controllers\TaskController;
 use App\Http\Controllers\TimelineEventController;
 use App\Http\Controllers\VenueController;
@@ -26,6 +27,8 @@ Route::apiResource('florists', FloristController::class);
 Route::apiResource('tasks', TaskController::class);
 Route::apiResource('seating-tables', SeatingTableController::class);
 Route::apiResource('timeline-events', TimelineEventController::class);
+Route::apiResource('simulations', SimulationController::class);
+Route::patch('simulations/{simulation}/activate', [SimulationController::class, 'activate']);
 
 Route::get('budget', [BudgetController::class, 'show']);
 Route::put('budget', [BudgetController::class, 'update']);
